kubernetes/traefik/prod-d1/buffering-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: buffering-middleware
  namespace: traefik
spec:
  buffering:
    maxRequestBodyBytes: 107374182400       # 100 GB
    memRequestBodyBytes: 20971520           # 20 MB
    maxResponseBodyBytes: 107374182400
    memResponseBodyBytes: 20971520
    retryExpression: "IsNetworkError()"
    timeout: 120s
