kubernetes/traefik/prod-d1/ldap-tcp-middlewear.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ldap-tcp
  namespace: default
spec:
  tcp:
    tls:
      passthrough: true
