kubernetes/traefik/prod-d1/pywb-forwarded-headers-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: pywb-forwarded-headers
  namespace: traefik
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: https
