kubernetes/traefik/prod-d1/traefik-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard-ingress
  namespace: traefik
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: traefik-dashboard.kube-prod-d1.domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 8080
  tls:
    - hosts:
        - traefik-dashboard.kube-prod-d1.domain.com
      secretName: traefik-dashboard-certificate-secret
